--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,9 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7" />
-
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.SEND_SMS"/>
+	<uses-permission android:name="android.permission.READ_CONTACTS" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".HomeActivity"
                   android:label="@string/app_name">
