--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,9 +8,15 @@
     <uses-permission android:name="android.permission.SEND_SMS"/>
 	<uses-permission android:name="android.permission.RECEIVE_SMS"/>
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
+
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
     <application android:icon="@drawable/icon" android:label="@string/app_name">
+    	<uses-library android:name="com.google.android.maps" />
         <activity android:name=".HomeActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -18,7 +24,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".IncomingList"></activity>
+
+        
+        <activity android:name=".AcceptLocationSMSActivity">
+        </activity>
+        
+        <activity android:name=".MapLocationActivity">
+        </activity>
+        
+		<receiver android:name=".receivers.SMSReceiver">
+			<intent-filter android:priority="100">
+				<action android:name="android.provider.Telephony.SMS_RECEIVED"></action>
+			</intent-filter>
+		</receiver>
+
 
         <receiver android:name=".SMSReceiver">
 	         <intent-filter android:priority="100">
