--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,17 +34,11 @@
         <activity android:name=".MapLocationActivity">
         </activity>
         
-		<receiver android:name=".receivers.SMSReceiver">
+		<receiver android:name="com.hackathon.photohunt.receivers.SMSReceiver">
 			<intent-filter android:priority="100">
 				<action android:name="android.provider.Telephony.SMS_RECEIVED"></action>
 			</intent-filter>
 		</receiver>
 
-
-        <receiver android:name=".SMSReceiver">
-	         <intent-filter android:priority="100">
-	             <action android:name="android.provider.Telephony.SMS_RECEIVED" />                  
-	         </intent-filter>
-	    </receiver>
     </application>
 </manifest>
