--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,9 +18,7 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name">
     	<uses-library android:name="com.google.android.maps" />
         <activity android:name=".HomeActivity"
-                  android:label="@string/app_name"
-                  android:screenOrientation="portrait"
-                  android:configChanges="orientation|keyboardHidden">
+                  android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
