--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,9 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7" />
+    <uses-permission android:name="android.permission.SEND_SMS"></uses-permission>
+	<uses-permission android:name="android.permission.RECEIVE_SMS"></uses-permission>
+	<uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".HomeActivity"
@@ -13,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".IncomingList"></activity>
 
+        <receiver android:name=".SMSReceiver">
+	         <intent-filter android:priority="100">
+	             <action android:name="android.provider.Telephony.SMS_RECEIVED" />                  
+	         </intent-filter>
+	    </receiver>
     </application>
 </manifest>
